DocString, Custom exceptions